<resources>
    <string name="app_name">乐天影视</string>
    <string name="home">首页</string>
    <string name="app_list">应用</string>
    <string name="surperise">惊喜</string>
    <string name="red_envelope">红包</string>
    <string name="me">我</string>
    <string name="input_user_name">用户名（大于5位）</string>
    <string name="input_password">输入密码（大于5位）</string>
    <string name="input_password_again">再次输入密码</string>
    <string name="invitation_code">邀请码</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="longin">登陆</string>
    <string name="register">注册</string>


    <string name="action_settings">Settings</string>
    <string name="navigation">导航</string>
    <string name="tui_jian">推荐</string>
    <string name="user">个人中心</string>
    <string name="le_feng">乐沣提供</string>
    <string name="play">播放</string>
    <string name="search_label">视频</string>
    <string name="click_to_login">点击登录</string>
    <string name="login_tips">注册即赠送3天VIP会员</string>
    <string name="app_tip">提示</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="area">地区：%s</string>
    <string name="actor">导演：%s</string>
    <string name="dirctor">主演：%s</string>
    <string name="video_type">类型：%s</string>
    <string name="video_score">评分：%s</string>
    <string name="year">年份：%s</string>
    <string name="action_time">上映时间：</string>
    <string name="resource_support">资源提供：</string>

    <string name="search">搜索</string>
    <string name="video_descripe">剧情描述：</string>
    <string name="other_msg">其他信息：</string>
    <string name="search_hint">影视名</string>
    <string name="cancel">取消</string>
    <string name="version_name">1.0</string>
    <string name="title_file">本地视频</string>
    <string name="title_online">在线视频</string>
    <string name="init_decoders">初始化播放器...</string>
    <string name="loadinfo">载入中，请稍后...</string>
    <string name="file_oper">文件操作</string>
    <string name="file_rename">重命名</string>
    <string name="file_rename_failed">重命名失败</string>
    <string name="file_rename_exists">文件已存在</string>
    <string name="file_delete">删除</string>
    <string name="file_delete_confirm">确定删除 (%s) ？</string>
    <string name="video_layout_loading">正在缓冲...</string>
    <string name="vitamio_theme_app_name">VPlayer codec</string>
    <string name="VideoView_error_title">Cannot play video</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Sorry, this video is not valid for streaming to
		this device.</string>
    <string name="VideoView_error_text_unknown">对不起,这个视频不能播放。</string>
    <string name="VideoView_error_button">OK</string>
    <string name="mediacontroller_play_pause">Play/Pause</string>
    <string name="imageview_content_description"></string>
    <string name="content_desc_lock">锁定</string>
    <string name="video_original">100%</string>
    <string name="video_fit_screen">全屏</string>
    <string name="video_stretch">拉伸</string>
    <string name="video_crop">裁剪</string>
    <string name="load_error">未获取到内容\r\n请点击页面重试</string>
    <string name="video_screen_locked">屏幕已锁定</string>
    <string name="video_screen_unlocked">屏幕锁定已解除</string>
    <string name="video_layout_buffering_progress">缓冲: %.2f%%</string>
    <string name="video_cannot_play">对不起,这个视频不能播放。</string>
    <string name="file_explorer_sdcard_not_available">SD卡无法读取</string>
    <string name="video_screenshot_save_in">截图存放在 %s.</string>
    <string name="video_screenshot_failed">截图失败</string>
    <string name="closing_file">正在退出…</string>
    <string name="input_phone_number">输入手机号码</string>
    <string name="input_pwd">输入密码</string>
    <string name="input_new_pwd">新密码</string>
    <string name="input_new_pwd_again">确认新密码</string>
    <string name="input_pwd_again">再次输入密码</string>
    <string name="input_msg_code">请输入验证码</string>
    <string name="request_msg_code">获取验证码</string>
    <string name="login">登录</string>
    <string name="loginoregister">注册/登录</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="nick_name">昵称</string>
    <string name="modify_pwd">修改密码</string>
    <string name="modify_personalfile">修改资料</string>
    <string name="phone">账号</string>
    <string name="input_card_pwd">请输入激活码</string>
    <string name="confirm_modify_pwd">修改</string>
    <string name="making">我要评分</string>
    <string name="share">分享</string>
    <string name="hot_video">热门视频</string>



    <string name="email">邮箱</string>
    <string name="member_valid">VIP有效期</string>
    <string name="recharge">开通VIP</string>
    <string name="free_open_vip">免费VIP</string>
    <string name="my_qr_code">我的二维码</string>
    <string name="free_open_vip_tips">推荐一位新用户下载并注册成功，即追加赠送三天VIP会员。</string>
    <string name="open_vip">开通VIP</string>
    <string name="common_memeber">普通会员</string>
    <string name="vip_memeber">VIP会员</string>
    <string name="recharge_of_card">卡密充值</string>
    <string name="recharge_of_zfb">支付宝充值</string>
    <string name="version_of_software">软件版本</string>
    <string name="clear_buffer">清除缓存</string>
    <string name="online_feedback">在线反馈</string>
    <string name="exit_login">退出登录</string>
    <string name="play_records">播放记录</string>
    <string name="month_card">1个月VIP会员</string>
    <string name="three_month_card">3个月VIP会员</string>
    <string name="six_month_card">6个月VIP会员</string>
    <string name="year_card">12个月VIP会员</string>
    <string name="recharg_title">充值卡密码</string>
    <string name="now_pwd">旧密码</string>
    <string name="confirm">确定</string>
    <string name="vip_tips">1.海量片库\n&#160;&#160;&#160;新鲜热播，追剧不断\n2.流量包月\n&#160;&#160;&#160;壹频道电影免费流量观看\n※&#160;&#160;&#160;流量包月功能暂对移动用户开放\n</string>
    <string name="sex">性别</string>
    <string name="real_name">真实姓名</string>
    <string name="in_city">所属城市</string>
    <string name="birthday">出生日期</string>
    <string name="qq_number">QQ</string>
    <string name="personal_cardid">身份证号</string>
    <string name="header_hint_refresh_normal">Pull to refresh</string>
    <string name="header_hint_refresh_ready">Release to refresh</string>
    <string name="header_hint_refresh_loading">Refreshing&#8230;</string>
    <string name="header_hint_refresh_time">Time：</string>
    <string name="footer_hint_load_normal">点击加载更多</string>
    <string name="footer_hint_load_ready">Release to load more</string>
</resources>
