<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.day.l.video.MainActivity">
    <android.support.v4.view.ViewPager
        android:id="@+id/container_vp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/control_button_container"
        >

    </android.support.v4.view.ViewPager>
    <RadioGroup
        android:id="@+id/control_button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        >
        <RadioButton
            android:id="@+id/home"
            android:text="@string/home"
            android:drawableTop="@drawable/home_navigation_button_selector"
            style="@style/navigation_style"
            android:checked="true"
            />
        <RadioButton
            android:id="@+id/app_list"
            android:text="@string/app_list"
            android:drawableTop="@drawable/applist_navigation_button_selector"
            style="@style/navigation_style"
            />
        <RadioButton
            android:id="@+id/surperise"
            android:text="@string/surperise"
            android:drawableTop="@drawable/surprise_navigation_button_selector"
            style="@style/navigation_style"
            />
        <RadioButton
            android:id="@+id/red_envelope"
            android:drawableTop="@drawable/redbags_navigation_button_selector"
            android:text="@string/red_envelope"
            style="@style/navigation_style"
            />
        <RadioButton
            android:id="@+id/me"
            android:text="@string/me"
            android:drawableTop="@drawable/my_navigation_button_selector"
            style="@style/navigation_style"
            />
    </RadioGroup>
</RelativeLayout>
