<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/input_user_name"
            style="@style/edittext_style"
            />

        <EditText
            android:id="@+id/pass_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            style="@style/edittext_style"
            />

        <EditText
            android:id="@+id/pass_word_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/input_password_again"
            android:inputType="textPassword"
            style="@style/edittext_style"
            />

        <EditText
            android:id="@+id/invitation_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/invitation_code"
            style="@style/edittext_style"
            />

        <TextView
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_drawable_shape"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/register"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />
    </LinearLayout>

    <com.day.l.video.widgets.LoadingView
        android:id="@+id/loading_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        ></com.day.l.video.widgets.LoadingView>
</RelativeLayout>