<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    >
    <LinearLayout
        android:id="@+id/content_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_user_name"
            android:layout_marginTop="20dp"
            style="@style/edittext_style"
            />
        <EditText
            android:id="@+id/pass_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_password"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            style="@style/edittext_style"
            />
        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/longin"
            android:gravity="center"
            android:padding="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_drawable_shape"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            />
        <TextView
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:gravity="center"
            android:padding="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_drawable_shape"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            />
    </LinearLayout>
    <com.day.l.video.widgets.LoadingView
        android:visibility="gone"
        android:id="@+id/loading_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></com.day.l.video.widgets.LoadingView>
</RelativeLayout>